tdf#90923 sw: invalidate layout when font substitutions are changed

This should cause all text to re-format with the newly substituted fonts.

Change-Id: I73f64cc679f818524940a52c2f7e696b02891c43